# krkr-sync

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
cmake/: ios.toolchain.cmake
include/krkr_sync/: deepseek_api.h  discovery.h  game_scanner.h  platform.h  protocol.h  sync_engine.h  tcp_client.h  tcp_server.h
src/: main_client.cpp  main_server.cpp
src/ai/: deepseek_api.cpp
src/core/: game_scanner.cpp  protocol.cpp  sync_engine.cpp
src/network/: discovery.cpp  tcp_client.cpp  tcp_server.cpp
src/platform/: platform.cpp  platform_ios.mm
